AP-24 Added border separation and fix too long text for SSL Synchronization Cache

--- a/src/Modules/Settings/Dnn.PersonaBar.Servers/Servers.Web/src/components/Tabs/tabs.less
+++ b/src/Modules/Settings/Dnn.PersonaBar.Servers/Servers.Web/src/components/Tabs/tabs.less
@@ -105,6 +105,12 @@
             }       
         }
     }
+
+    .smallLabelSize {
+        label {
+            font-size: 92%;
+        }
+    }
 }
 
 
@@ -142,6 +148,16 @@
         .dnn-servers-grid-panel.newSection {
             padding-top: 20px;
             padding-bottom: 10px;
+        }
+        .borderSeparation { 
+            > div {
+                border-bottom: 1px solid @alto;
+                margin-top: 10px;
+                padding-bottom: 10px;                
+            }
+            :first-child {
+                margin-top: 0;
+            }
         }
     }
 }
